<resources>
    <string name="app_name">MoneyApp Dicas e Controle Financeiro</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Money App</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_operacoes">Operações</string>
    <string name="menu_contas">Contas</string>
    <string name="menu_extrato">Extrato</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_noticias">Notícias</string>
    <string name="moneyAppTitle">Money App</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_noticias">Notícias</string>
</resources>
