<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="br.unicamp.ft.f102312_m203257.MoneyApp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_operacoes"
        android:name="br.unicamp.ft.f102312_m203257.MoneyApp.ui.operacoes.OperacoesFragment"
        android:label="@string/menu_operacoes"
        tools:layout="@layout/fragment_operacoes" />

    <fragment
        android:id="@+id/nav_extrato"
        android:name="br.unicamp.ft.f102312_m203257.MoneyApp.operacoes.ExtratoFragment"
        android:label="@string/menu_extrato"
        tools:layout="@layout/fragment_extrato" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="br.unicamp.ft.f102312_m203257.MoneyApp.ui.contas.ContasFragment"
        android:label="@string/menu_contas"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="br.unicamp.ft.f102312_m203257.MoneyApp.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="br.unicamp.ft.f102312_m203257.MoneyApp.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <activity
        android:id="@+id/nav_noticias"
        android:name="br.unicamp.ft.f102312_m203257.MoneyApp.NoticiasActivity"
        android:label="@string/menu_noticias"
        tools:layout="@layout/activity_noticias" />
</navigation>