<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_despesas"
            android:icon="@drawable/ic_monetization_on_black_24dp"
            android:title="@string/menu_despesas" />
        <item
            android:id="@+id/nav_contas"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/menu_contas" />
    </group>

    <item android:title="Notícias">
        <menu>
            <item
                android:id="@+id/nav_noticias"
                android:icon="@drawable/ic_local_library_black_24dp"
                android:title="@string/menu_noticias" />
        </menu>
    </item>

</menu>
